--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "axios": "^1.6.2",
     "axios-mock-adapter": "^1.22.0",
+    "chart.js": "^4.4.2",
     "draft-js": "0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "emoji-picker-react": "^4.9.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "firebase": "^10.11.0",
     "html-to-draftjs": "1.4.0",
     "i18next": "^23.7.8",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -42,11 +45,14 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.7",
+    "next-sitemap": "^4.2.3",
     "nprogress": "^0.2.0",
     "prettier": "^3.1.1",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
+    "react-country-flag": "^3.1.0",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18",
     "react-draft-wysiwyg": "^1.15.0",
@@ -54,10 +60,13 @@
     "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.5.0",
+    "react-multi-carousel": "2.8.5",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^9.0.2",
     "sass": "^1.69.5",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.1",
+    "sweetalert2": "^11.10.5",
     "yup": "^1.3.3"
   },
   "devDependencies": {
