--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ NEXT_PUBLIC_API_HOST=http://localhost:3000/api
 GOOGLE_SECRET=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
 GOOGLE_CLIENT_ID=571962248186-4mud7rklkkh94kvmh3bpjl7br7nhcoqr.apps.googleusercontent.com
 NEXTAUTH_URL=http://localhost:3000
+FACEBOOK_CLIENT_ID=423237530678751
+FACEBOOK_SECRET=032541d71a537810c6aeeee3371dbedd
