next auth secret

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ GOOGLE_CLIENT_ID=571962248186-4mud7rklkkh94kvmh3bpjl7br7nhcoqr.apps.googleuserco
 NEXTAUTH_URL=http://localhost:3000
 FACEBOOK_CLIENT_ID=423237530678751
 FACEBOOK_SECRET=032541d71a537810c6aeeee3371dbedd
+NEXT_AUTH_SECRET=OIg3BBwvp6Acbsjrp4a8XRAb5+H3d79JLxBGtjOVhjg=
