--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ NEXTAUTH_URL=http://localhost:3000
 FACEBOOK_CLIENT_ID=423237530678751
 FACEBOOK_SECRET=032541d71a537810c6aeeee3371dbedd
 NEXT_AUTH_SECRET=OIg3BBwvp6Acbsjrp4a8XRAb5+H3d79JLxBGtjOVhjg=
+FE_VAPID_KEY=BHfyN-GG-myRw8vdqh0Lg6DGh2ipKhINop77JY9k-Ctk-jNf5v0FWlSIWG1bzJxKJZ5SpTYuT4teLCTf0BaRkRA
