--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,12 +52,12 @@
       }
     }
   },
+  "@typescript-eslint/no-namespace": "error",
   "overrides": [
     {
       "files": ["src/iconify-bundle/*"],
       "rules": {
-        "@typescript-eslint/no-var-requires": "off",
-        "@typescript-eslint/no-namespace": "error"
+        "@typescript-eslint/no-var-requires": "off"
       }
     }
   ]
